syntax = "proto3";

package pubs;
option go_package=".;pubs";

// 报告Nat信息
message ReportNatClient {
    fixed32 RoomID = 1;      // 房间ID
    string  VerifiyCode = 2; // 房间验证码
}
