syntax = "proto3";

package rdsstruct;
option go_package=".;rdsstruct";

message RdsPlayerData{
    string UID = 1;
    string DisplayName = 2;
    string ClientIdAddress = 3;
    string ClientIdId = 4;
    string BattleSpaceId = 5;
    map<string,string> Externs = 6;
}